--- a/YOLOv9.ipynb
+++ b/YOLOv9.ipynb
@@ -869,7 +869,7 @@
         "\n",
         "!python detect_dual.py --weights /content/yolov9/runs/train/exp/weights/best.pt\\\n",
         "--conf 0.75\\\n",
-        "--source /content/yolov9/data/datasets/images/test/20170624003915.jpg\\\n",
+        "--source /content/yolov9/data/datasets/images/test/bdc01775-08f8-4ca7-8940-5a8a219caa7f.jpg\\\n",
         "--device 0"
       ],
       "metadata": {
@@ -877,25 +877,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5s4UjAboe719",
-        "outputId": "7db5db83-d6f8-47e2-d111-9901a11df197"
+        "outputId": "9d9569bf-b4f6-4518-bc42-30120786098f"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/content/yolov9\n",
-            "\u001b[34m\u001b[1mdetect_dual: \u001b[0mweights=['/content/yolov9/runs/train/exp/weights/best.pt'], source=/content/yolov9/data/datasets/images/test/20170624003915.jpg, data=data/coco128.yaml, imgsz=[640, 640], conf_thres=0.75, iou_thres=0.45, max_det=1000, device=0, view_img=False, save_txt=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=runs/detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1\n",
+            "\u001b[34m\u001b[1mdetect_dual: \u001b[0mweights=['/content/yolov9/runs/train/exp/weights/best.pt'], source=/content/yolov9/data/datasets/images/test/bdc01775-08f8-4ca7-8940-5a8a219caa7f.jpg, data=data/coco128.yaml, imgsz=[640, 640], conf_thres=0.75, iou_thres=0.45, max_det=1000, device=0, view_img=False, save_txt=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=runs/detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1\n",
             "YOLO 🚀 v0.1-104-g5b1ea9a Python-3.10.12 torch-2.5.1+cu121 CUDA:0 (Tesla T4, 15102MiB)\n",
             "\n",
             "/content/yolov9/models/experimental.py:243: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
             "  ckpt = torch.load(attempt_download(w), map_location='cpu')  # load\n",
             "Fusing layers... \n",
             "yolov9-c summary: 604 layers, 50698278 parameters, 0 gradients, 236.6 GFLOPs\n",
-            "image 1/1 /content/yolov9/data/datasets/images/test/20170624003915.jpg: 384x640 (no detections), 71.2ms\n",
-            "Speed: 0.4ms pre-process, 71.2ms inference, 21.5ms NMS per image at shape (1, 3, 640, 640)\n",
-            "Results saved to \u001b[1mruns/detect/exp3\u001b[0m\n"
+            "image 1/1 /content/yolov9/data/datasets/images/test/bdc01775-08f8-4ca7-8940-5a8a219caa7f.jpg: 640x480 1 bottle, 93.3ms\n",
+            "Speed: 0.6ms pre-process, 93.3ms inference, 525.9ms NMS per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1mruns/detect/exp6\u001b[0m\n"
           ]
         }
       ]
